[package]
name = "git-glimpse"
description = "(WIP) An opinionated command-line tool that uses `git log --graph` to only show refs you care about."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
ezcmd = { version = "0.1.0", git = "https://github.com/ErichDonGubler/ezcmd", branch = "main" }
log = "0.4.17"
