[package]
name = "git-glimpse"
description = "Show a minimal graph of Git commits for various use cases."
version = "0.4.6"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ErichDonGubler/git-glimpse"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
ezcmd = "0.2"
log = "0.4.17"

# The profile that `cargo dist` will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.0.7"
rust-toolchain-version = "1.70.0"
ci = ["github"]
installers = ["shell", "powershell"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
